<resources>
    <string name="app_name">ICOlogs</string>
    <string name="api_key">AIzaSyAFh5w8z8bxaQBoiLCNlFxiCjHRgjDYxMw</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="like_ico">Like ICOs</string>
    <string name="like_project">You like the project</string>
    <string name="not_like_project">You did not like project</string>
    <string name="active_ico">Active ICOs</string>
    <string name="item_active_ico">Active ICO</string>
    <string name="upcoming_ico">Upcoming ICOs</string>
    <string name="item_upcoming_ico">Upcoming ICO</string>
    <string name="recent_ico">Recent ICOs</string>
    <string name="days">DAYS</string>
    <string name="start_day">Start date:</string>
    <string name="end_day">Expiry date:</string>
    <string name="end_time">Expiry time:</string>
    <string name="symbol">Symbol:</string>
    <string name="token_price">Token price:</string>
    <string name="need_money">Need money:</string>
    <string name="invest">You can invest:</string>
    <string name="white_paper">Download White Paper</string>
    <string name="news">News ICO</string>
    <string name="support">Click here to contact us</string>
    <string name="support_title">Write in support</string>
    <string name="website">View website</string>
    <string name="support_descript">If you notice the typo or doubtful information, you have an offer about adding ICO project or if you want to connect with administration of the application - you can write to us.</string>
    <string name="support_descript2">Fill in the field below, point out the reason and send the message to us. We usually answer in a week.</string>
    <string name="support_field1">How should we address to you?</string>
    <string name="support_field2">Type  your e-mail</string>
    <string name="support_field3">Type your message</string>
    <string name="support_send">Send</string>
    <string name="dialog_title">Like our app?</string>
    <string name="dialog_message">Your marks  and comments are important for us - support us!</string>
    <string name="dialog_pos_btn">Rate app</string>
    <string name="dialog_neg_btn">Later</string>


    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
</resources>
